# nvdsvideotemplate-example

./: .gitignore  CMakeLists.txt  LICENSE  README.md
nvdsvideotemplate/common/algorithm/cuda/: nv12_to_rgb_kernel.cu  nv12_to_rgb_kernel.hpp
nvdsvideotemplate/customlib_impl/: Makefile  customlib_impl.cpp  customlib_trt.cpp  customlib_trt.hpp
nvdsvideotemplate/trt/: common.h  safeCommon.h
src/: deepstream_sample.c  deepstream_sample.cpp  deepstream_sample.py  deepstream_sample_parameters.cpp  deepstream_sample_parameters.h
